--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="skype_toolbar" content="skype_toolbar_parser_compatible" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="google" value="notranslate" />
-    <title>SCSS-mixin</title>
+    <title>SCSS-template</title>
     <link rel="stylesheet" href="/build/css/fonts.min.css" />
     <link rel="stylesheet" href="/build/css/style.min.css" />
   </head>
